<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicatico Lista Vip Curso Android</string>
    <string name="txt_hint_edit_Primeiro_nome">Primeiro nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do Curso Desejado</string>
    <string name="txt_hint_edit_telefone_de_contato">Telefone de Contato</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
    <string name="txt_selecione_um_curso">selecione um curso...</string>
</resources>