<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/txt_titulo"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_Primeiro_nome"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <EditText
        android:id="@+id/editSobrenome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobrenome"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNome" />

    <EditText
        android:id="@+id/editCurso"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:layout_marginTop="140dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_nome_do_curso"
        android:inputType="text"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSobrenome" />

    <EditText
    android:id="@+id/editTelContato"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_margin="16dp"
    android:ems="10"
    android:hint="@string/txt_hint_edit_telefone_de_contato"
    android:inputType="text"
    android:text="Name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editCurso" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/txt_button_limpar"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelContato"
        app:layout_constraintVertical_bias="0.837" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="196dp"
        android:layout_marginBottom="40dp"
        android:text="@string/txt_button_salvar"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintStart_toEndOf="@+id/btnLimpar"
        app:layout_constraintTop_toBottomOf="@+id/editTelContato"
        app:layout_constraintVertical_bias="0.837" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:text="@string/txt_button_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelContato" />

</androidx.constraintlayout.widget.ConstraintLayout>